# Iclinic

./: docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  test.py
backend/src/api/middleware/: auth.py  cors.py  logging.py
backend/src/api/rest/: app.py  dependencies.py
backend/src/api/rest/routes/: auth.py  booking.py  health.py  users.py  voice.py
backend/src/config/: hashing.py  jwt_handler.py  settings.py
backend/src/control/voice_assistance/: config.py  graph.py  models.py  routes.py  session_store.py  state.py  utils.py
backend/src/control/voice_assistance/nodes/: book_appointment_node.py  booking_confirmation_node.py  call_init_node.py  cancel_appointment_node.py  cancel_confirmation_node.py  clarify_node.py  doctor_selection_node.py  identity_confirmation_node.py  mapping_node.py  service_intent_node.py  slot_selection_node.py  stt_node.py  think_node.py  tts_node.py
backend/src/control/voice_assistance/prompts/: clarify_node_prompt.py  confirmation_node_prompt.py  mapping_node_prompt.py
backend/src/core/services/: appointment_type.py  user.py
backend/src/data/clients/: postgres_client.py
backend/src/data/migrations/: roles.py  runner.py
backend/src/data/migrations/v1/: 0000_bootstrap.sql
backend/src/data/migrations/v1/versions/: 0002_create_users.sql  0003_create_patient_profiles.sql  (+4 more)
backend/src/data/models/postgres/: ENUM.py  __init__.py  appointment.py  appointment_type.py  available_slot.py  refresh_token.py  role.py  user.py
backend/src/data/repositories/: generic_crud.py
backend/src/schemas/: user.py
(+18 files in other folders)
