[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.133.1",
    "fastapi-mail>=1.6.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.9",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.22",
    "sentence-transformers>=5.2.3",
    "sqlalchemy>=2.0.47",
    "twilio>=9.10.2",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
]
